mica-server: initial support for Concord's JSON stores