@@ -123,9 +123,6 @@
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
-                    <configuration>
-                        <compilerArgs>--enable-preview</compilerArgs>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
@@ -365,7 +362,7 @@
                     <plugin>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
-                            <compilerArgs>-proc:full --enable-preview</compilerArgs>
+                            <compilerArgs>-proc:full</compilerArgs>
                         </configuration>
                     </plugin>
                 </plugins>
